--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "http": "^0.0.1-security",
     "http-status-codes": "^2.3.0",
