--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "openai": "^6.15.0",
     "slugify": "^1.6.6",
     "ts-node-dev": "^2.0.0",
     "zod": "^4.1.13"
